# RuWordNet

./: .gitignore  .pylintrc  GUIDE-RU.md  Makefile  Pipfile  README.md  docker-compose.yaml  guide.txt  notes.org  pyproject.toml  rules.txt  setup.cfg
.vim/: settings.json
db/: 001.sql  checks.sql
raw2sql/: raw2sql.py
raw2xml/: concepts.py  relations.py  synonyms.py  text_entries.py
scripts/: check_frequent_words_for_ili.py  check_missing_rwn-wn_relations.py  cognates_relation_statistics.py  collocation_relation_statistics.py  export_collocation_report.py  export_ili_differences.py  export_ili_relations_for_review.py  extract_morph.py  group_roots.py  import_antonyms.py  import_auto_derived_verified_data.py  import_cause-entailment.py  import_class-instance_relations.py  import_collocation_report.py  import_concepts_json.py  import_corrected_entry_morph_data.py  import_domains.py  import_ili_data.py  import_ili_data.sh  import_ili_map_wn.py  import_manual_ili_data.py  import_meronymy_relations.py  import_wordnet_mapping.py  load_grouped_roots.py  match_cause_entailment_synsets.py  predefined_cognates.txt  process_ruthes_wordnet_matching.py  split_grouped_roots.py  test_verified_ili_data.py  update_wn30_data.py
sql/: consistency_checkings.sql  consistency_checks.sql  miscalleneous.sql  possible_anomalies.sql  post-conversion.sql  prepare_database.sql  rwn-uuid-to-text.sql  wn-no-rwn.sql
sql2RuWordNetXml/: sql2RuWordNetXml.py
sql2lex/: __init__.py  sql2lex.py
sql2sql/: sql2sql.py
sql2xml/: __init__.py  sql2ruthes_xml.py  sql2rwn_omw_xml.py  sql2rwn_xml.py  (+1 more)
(+13 files in other folders)
