[tool.poetry]
name = "ruwordnet"
version = "0.1.0"
description = ""
authors = ["German Lashevich <german.lashevich@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.5.2"
argparse = "^1.4.0"
tqdm = "^4.47.0"
isort = "^4.2.5"
psycopg2 = "^2.8.6"
nltk = "^3.5"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
black = "^19.10b0"
ipython = "^7.16.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
