[tool.poetry]
name = "ruwordnet"
version = "0.1.0"
description = ""
authors = ["German Lashevich <german.lashevich@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.9.1"
argparse = "^1.4.0"
tqdm = "^4.47.0"
isort = "^5.0.0"
psycopg2 = "^2.8.6"
nltk = "^3.6"
pymorphy2 = {extras = ["fast"], version = "^0.9.1"}

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
black = "^19.10b0"
ipython = "^7.31.1"
autoflake = "^2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
